Refactoring container support: re-executable container configuration, qualifier based lookup